tg-7732 [FE] Agregar paso para ingresar código de 2FA en flujo de login de WebApp

--- a/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
@@ -14,6 +14,13 @@
 			"external": {
 				"TITLE": "Iniciar sesión",
 				"GO_TO_EXTERNAL_LOGIN": "Ingresar con OAuth"
+			},
+			"two-factor-authentication-dialog": {
+				"TITLE": "Ingrese código de autenticación por doble factor",
+				"DESCRIPTION": "Ingrese el código que aparece en su aplicación de doble factor de autenticación (Google Authenticator, FreeOTP o similar)",
+				"VERIFICATION_CODE_MINIMUM_LENGTH": "El código debe contener 6 dígitos",
+				"VERIFICATION_CODE_INVALID": "Código incorrecto",
+				"VERIFY": "Verificar"
 			}
 		},
 		"LOGOUT": "Cerrar Sesión",
