tg-7942 [FE] Define constantes para el uso de iconos, estados y estilos para las indicaciones y tomas de indicación

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -24,7 +24,10 @@
 				},
 				"label": {
 					"SUSPENDED": "Suspendida",
-					"INDICATED": "Indicada"
+					"INDICATED": "Indicada",
+					"REJECTED": "Rechazada",
+					"COMPLETED": "Completada",
+					"IN_PROGRESS": "En progreso"
 				},
 				"indication-extra-description": {
 					"DOSE": "Dosis:",
