tg-7827 [FE] Se agrega la acción "Rechazar"

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -174,6 +174,10 @@
 						"SUCCESS": "Se completó la acción de la toma de enfermería correctamente",
 						"ERROR": "No se pudo completar la acción de la toma de enfermería correctamente."
 					}
+				},
+				"reject": {
+					"TITLE": "Rechazar y definir motivo",
+					"SUBTITLE": "Ingrese el motivo por el que la indicación no puede completarse."
 				}
 			}
 		}
