--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -30,6 +30,8 @@
 			"ADD_ANOTHER_PROFESSIONAL": "Añadir otro profesional",
 			"CHOOSE_PROFESSIONAL": "Seleccione profesional",
 			"CHOOSE_PROFESSIONAL_ERROR": "Por favor seleccione un profesional adjunto",
+			"OPTIONAL_ALIAS": "Alias (Opcional)",
+			"ALIAS_HINT_TEXT" : "Identificador para la oferta de turnos",
 			"dialog": {
 				"TITLE": "Nueva atención",
 				"EDIT": "Editar atención",
