tg-8005 [BE] Agregar validaciones en actualización de estado de toma de indicación.

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -181,3 +181,7 @@ medical-coverage.rnos-duplicated = This Rnos is already associated with other me
 medical-coverage.cuit-duplicated = The CUIT is already associated with other medical coverage
 medical-coverage.invalid-cuit =  The CUIT must be numeric
 medical-coverage.plan-exists =  This plan is already associated to medical coverage
+
+####### Nursing Record #######
+nursing.record.administration.time.invalid = Administration time required to change status
+nursing.record.reason.invalid = Reason required to change status
