--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -367,3 +367,7 @@ app.system.properties.cron.config=Define frecuencia de ejecución de la tarea qu
 
 mail.subject.email-confirmar-reserva=Confirmación de turno online
 mail.subject.new-appointment=Nuevo turno
+
+####### Nursing Record #######
+nursing.record.administration.time.invalid = Debe especificarse un horario de adminstración
+nursing.record.reason.invalid = Debe especificarse el motivo
