tg-8001. [FE] Crear popup de búsqueda del concepto vacuna

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -1,5 +1,10 @@
 {
     "ambulatoria": {
+        "vaccine-search": {
+            "TITLE": "Agregar vacuna",
+            "IMMUNIZATION": "Vacuna",
+            "COLUMN_VACCINE_HEADER": "Descripción SNOMED"
+        },
         "medical-coverage-summary-view": {
             "TITLE": "Cobertura",
             "AFFILIATE_NUMBER": "Afiliado N°:",
