--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -514,8 +514,7 @@
                         "NOT_VACCINE_SELECTED_ERROR": "Debe seleccionar una vacuna",
                         "NOT_SCHEME_SELECTED_ERROR": "Si selecciona una condición, debe elegir un esquema",
                         "NOT_DOSE_SELECTED_ERROR": "Si selecciona un esquema, debe elegir una dosis",
-                        "NULL_OPTION_MESSAGE": "Seleccione una opción",
-                        "COLUMN_VACCINE_HEADER": "Descripción SNOMED"
+                        "NULL_OPTION_MESSAGE": "Seleccione una opción"
                     }
                 }
             },
