tg-7829 [FE] Se agrega la acción "Deshacer"

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -162,7 +162,8 @@
 			}, 
 			"buttons": {
 				"TO_REGISTER": "registrar",
-				"REGISTER": "marcar como completado"
+				"REGISTER": "marcar como completado",
+				"UNDO": "Deshacer"
 			},
 			"dialogs": {
 				"register": {
