tg-8072 [P2] Abre pop up de crear turno siendo profesional asociado

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -68,7 +68,8 @@
 				"ERROR": "Paciente no encontrado",
 				"SUCCESS": "Paciente encontrado",
 				"APPOINTMENT_ERROR": "Error al confirmar el turno",
-				"APPOINTMENT_SUCCESS": "Turno confirmado"
+				"APPOINTMENT_SUCCESS": "Turno confirmado",
+				"NOT_RESPONSIBLE": "Solo el responsable de la agenda puede crear turnos"
 			}
 		},
 		"cancel": {
