tg-8110 [FE] Al clickear IMPRIMIR TURNO se descarga el pdf y se abre la ventana de impresion automaticamente

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -85,6 +85,7 @@
 		},
 		"appointment": {
 			"TITLE": "Turno",
+			"PRINT": "Imprimir turno",
 			"BUTTON_CLINICAL_HISTORY": "Ver historia clínica",
 			"EDIT_PATIENT_INFO": "Editar información del paciente",
 			"APPOINTMENT_STATE": "Estado de turno",
