tg-8108 [FE] Agregar traducciones

--- a/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
@@ -55,7 +55,11 @@
 				"REPASSWORD_LABEL": "Repetir clave",
 				"REPASSWORD_NOTEQUIVALENT": "Deben coincidir las claves",
 				"REPASSWORD_REQUIRED": "Debe reingresar la clave",
-				"SUBMIT": "Confirmar"
+				"SUBMIT": "Confirmar",
+				"ERROR_MINLENGTH": "Mínimo de 8 caracteres",
+				"ERROR_UPPERCASE": "Mayúscula",
+				"ERROR_LOWERCASE": "Mínuscula",
+				"ERROR_NUMBER": "Número"
 			},
 			"result": {
 				"OK": "Sus datos de acceso fueron establecidos correctamente",
