tg-8135 [Mejora] Etiqueta "Rechazado" en Indicaciones debe verse igual que en Enfermería

--- a/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/indicacion/es-AR.json
@@ -25,8 +25,8 @@
 				"label": {
 					"SUSPENDED": "Suspendida",
 					"INDICATED": "Indicada",
-					"REJECTED": "Rechazada",
-					"COMPLETED": "Completada",
+					"REJECTED": "Rechazado",
+					"COMPLETED": "Completado",
 					"IN_PROGRESS": "En progreso"
 				},
 				"indication-extra-description": {
