tg-8139. [FE] Convertir a card la tabla de sección "Motivos"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -87,6 +87,7 @@
                 "motivo": {
                     "TITLE": "Motivo de consulta",
                     "ADD": "Agregar motivo",
+                    "LIST_CARD_TITLE": "Motivos registrados",
                     "table": {
                         "columns": {
                             "MOTIVO": "Motivos"
