tg-8027. [FE] Convertir a card tabla de sección "Antecedentes familiares"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -157,6 +157,8 @@
                     "TITLE": "Antecedentes familiares",
                     "ANTECEDENTES_FAMILIARES": "Antecedentes familiares",
                     "SEARCH_PLACEHOLDER": "Buscar antecedentes familiares",
+                    "LIST_CARD_TITLE": "Antecedentes registrados",
+                    "DATE_PREFIX": "Desde",
                     "FECHA": "Fecha de registro"
                 },
                 "antecedentes-personales": {
