tg-8028. [FE] Convertir a card la tabla de sección "Medicación habitual"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -99,8 +99,9 @@
                     "DESCRIPCION": "Descripción",
                     "NOMBRE_MEDICACION": "Nombre de medicación",
                     "OBSERVACIONES": "Observaciones",
-                    "SUSPENDIDO": "Suspendido",
+                    "SUSPENDIDA": "Suspendida",
                     "TABLE_TITLE": "Medicaciones registradas",
+                    "LIST_CARD_TITLE": "Medicaciones habituales registradas",
                     "TITLE": "Medicación habitual",
                     "STATE": "Estado",
                     "MEDICATION": "Medicación",
