tg-8031. [FE] Convertir a card la tabla de sección "Solicitud de referencia"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -215,6 +215,10 @@
                     "TITLE": "Solicitud de referencia",
                     "ADD_REQUEST": "Agregar solicitud",
                     "REQUESTED_REFERENCE": "Referencias solicitadas",
+                    "REGISTERED_REQUEST": "Solicitudes registradas",
+                    "PROBLEMS": "Problemas",
+                    "CARE_LINE": "Línea de cuidado",
+                    "SPECIALTY": "Especialidad",
                     "table": {
                         "columns": {
                             "REFERENCES": "Referencias agregadas"
