tg-8191 HotFix ignorar proxy en cubejs

--- a/front-end/apps/projects/hospital/src/assets/i18n/configuracion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/configuracion/es-AR.json
@@ -36,6 +36,11 @@
 			"cubejs": {
 				"TITLE": "Tableros"
 			}
+		},
+		"http": {
+			"client": {
+				"TITLE": "Cliente HTTP"
+			}
 		}
 	},
 	"spring": {
